[package]
name = "lista2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.9.0-alpha.1"
plotters = "0.3"
bst-rs = "0.1.0"
#env_logger = "0.11.3"
#log = "0.4.21"
##fern = "0.6.2"

[[bin]]
name = "randarr"
path = "src/bin/randarr.rs"

[[bin]]
name = "sortarr"
path = "src/bin/sortarr.rs"

[[bin]]
name = "revarr"
path = "src/bin/revarr.rs"

[[bin]]
name = "inssort"
path = "src/bin/inssort.rs"

[[bin]]
name = "qksort"
path = "src/bin/qksort.rs"

[[bin]]
name = "hybsort"
path = "src/bin/hybsort.rs"

[[bin]]
name = "zad2"
path = "src/bin/zad2.rs"

[[bin]]
name = "zad3"
path = "src/bin/zad3.rs"

[[bin]]
name = "sandbox"
path = "src/bin/sandbox.rs"

[[bin]]
name = "zad4"
path = "src/bin/zad4.rs"

[[bin]]
name = "dbqksort"
path = "src/bin/dbqksort.rs"